--- a/templates/index.html
+++ b/templates/index.html
@@ -168,27 +168,28 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <i class="fas fa-comments mr-2"></i>
-                Sales Executive Chatbot
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-home mr-1"></i> Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-info-circle mr-1"></i> About</a>
-                    </li>
-                </ul>
-            </div>
+   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000; width: 100%;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            Cognitive
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-home mr-1"></i> Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-info-circle mr-1"></i> About</a>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
+
+
 
     <div class="container main-container">
         <div class="row">
@@ -199,7 +200,7 @@
                         <img class="emoji-image" src="static/images/speaking.png" alt="Speaking Emoji">
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title text-center mb-3">Bot Response</h5>
+                        <h5 class="card-title text-center mb-3">Customer Response</h5>
                         <div id="bot-response" class="mb-3"></div>
                         <button id="end-test" class="btn btn-danger btn-block">
                             <i class="fas fa-stop-circle mr-2"></i>End Test
